docs/css/main.css
/* ... */
@media only screen and (min-width:768px) {
  div.cuenta-regresiva ul li {
    float: left;
    width: 25%;
  }
}

/**Footer**/

footer {
  background-color: #353535;
  padding-top: 40px;
  margin-top: 20px;
}

footer .contenedor > div {
  color: #ffffff;
  padding: 0px 20px;
  font-size: 12px;
}

@media only screen and (min-width:768px) {
  footer .contenedor > div {
    width: 33.3%;
    float: left;
  }
}

footer h3{
  color: #ffffff;
  text-transform: uppercase;
  font-family: 'Oswald', sans-serif;
  margin-bottom: 20px;
}

footer span {
  color: #f34918;
}

footer .ultimos-tweets li {
  margin-bottom: 10px;
}

footer nav.redes-sociales {
  text-align: left;
}

p.copyright{
  background-color: #2e2e2e;
  color: #ffffff;
  padding: 10px 0;
  margin: 20px 0 0 0;
  text-align: center;
}


/*** INTERNAS **/

/*Galeria de fotos, conferencia.html*/

body.conferencia .navegacion-principal .activo {
  border-bottom: 2px solid #fe4918;
}

/*Codigo de "div.galeria" creado por mi, Juan Carlos, para centrarlo. Chequear mejores posibilidades. Seccion 38,clase 290*/
div.galeria {
  display: inline-block;
  text-align: center;
}

div.galeria a {
  display: inline-block;
  margin-bottom: 5px;
}

/* Registro */

form.registro h3 {
  text-align: center;
  text-transform: uppercase;
  margin: 20px 0 0 0;
}

form.registro label {
  margin-bottom: 5px;
  font-weight: bold;
}

h4 {
  text-align: center;
  text-transform: uppercase;
  border-bottom: 2px solid #fe4918; /*Línea naranja*/
  padding-bottom: 10px;
  font-size: 1.2em;
}

div.caja {
  background-color: white;
  border: 1px solid #e1e1e1;
  padding: 10px;
  margin: 10px;
}

div.campo { /* Para los campos de Registro*/
  padding: 20px;
}

@media only screen and (min-width:768px) {
  div.campo {
    float: left;
    width: 33.3%;
  }
}

div.paquetes .tabla-precio:hover { /*Solo existe en el registro.html no en el index.html, aplicamos el hover para deshacernos del efecto creado en el index*/
  transform: none;
  box-shadow: none;
}

div.paquetes .tabla-precio input {
  clear: both;
  width: 100px;
  margin: 10px auto 0 auto;
  display: block;
}

.contenido-dia {
  padding: 20px;
  display: none; /* Hacemos que desaparezcan nuestros talleres y al seleccionar el pase lo mostraemos utilizando JS. */
}

@media only screen and (min-width:768px) { /* Flotamos el div de talleres para agruparlos en tres columnas*/
  .contenido-dia > div { /*El primer elemento hijo, osea, el div de talleres*/
    float: left;
    width: 33.3%;
  }
}

.contenido-dia > div p { /*Parrafos a la izquierda*/
  text-align: left;
}

.contenido-dia > div label { /*Ponemos las etiquetas en bloque para que esten una debajo de otra*/
  display: block;
  margin-bottom: 10px;
}

.contenido-dia > div input {
  margin-right: 10px;
}

.contenido-dia > div label time {
  color: #fe4918;
  font-weight: bold;
}

/* Resumen registro */

div.resumen p {
  font-size: 1.2em;
  text-transform: uppercase;
}

div.resumen div.extras {
  float: left;
  width: 50%;
  padding: 30px;
}

div.extras div.orden {
  text-align: left;
  margin-bottom: 10px;
}

div.extras div.orden input {
  margin: 10px 0 0 0;
}

div.resumen div.total {
  float: right;
  width: 50%;
  padding: 30px;
}

div.resumen input {
  display: block;
  margin: 10px auto;
}

#lista-productos { /*Recuadro de la lista de productos*/
  background-color: #e1e1e1;
  padding: 20px;
  display: none; /*Con el codigo en JS lista_productos.style.display = "block" y este, hacemos que el recuadro gris del resumen este oculto hasta que se le de clik y lo activamos en el JS;*/
}

#suma-total {
  text-align: center;
  font-size: 2em;
  color: #fe4918;
}

#error {
  clear: both;
  padding: 20px;
  text-align: center;
  display: none;
}

/**Colorbox**/

div.cboxElement { /*Esta clase la tomamos al inspeccionar las imagenes con plugins, que son las clases que agrega el plugin.*/
  padding: 50px!important;
  text-align: center; /*Para centrar texto e imagen*/
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
    white-space: nowrap; /* 1 */
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
    white-space: inherit;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}
/* ... */

